Add dishes model, migrations, handlers and routes
